change encoding to utf-8
 - change build system to cmake
 - added utils for utf8 encoding
 - change item string size to 128

--- a/石器時代服務器端最新完整源代碼/saac/CMakeLists.txt
+++ b/石器時代服務器端最新完整源代碼/saac/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 project(saac)
 
-add_executable(saac main.c)
+add_executable(saacjt main.c)
 add_library(saacproto saacproto_serv.c saacproto_util.c mail.c)
-target_sources(saac
+target_sources(saacjt
     PRIVATE acfamily.c
     PRIVATE attestation.c
     PRIVATE char.c
@@ -18,8 +18,8 @@ target_sources(saac
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
 find_package(MySQL)
-target_include_directories(saac PRIVATE include)
-target_include_directories(saac PUBLIC ${MYSQL_INCLUDE_DIR})
+target_include_directories(saacjt PRIVATE include)
+target_include_directories(saacjt PUBLIC ${MYSQL_INCLUDE_DIR})
 target_include_directories(saacproto PRIVATE include)
-target_link_libraries(saac PUBLIC ${MYSQL_LIBRARY})
-target_link_libraries(saac PRIVATE saacproto)
+target_link_libraries(saacjt PUBLIC ${MYSQL_LIBRARY})
+target_link_libraries(saacjt PRIVATE saacproto)
